# discnet

./: .gitignore  CMakeLists.txt  vcpkg.json
discnet/: CMakeLists.txt
discnet/src/: adapter_manager.cpp  discnet_lib.cpp  discovery_message_handler.cpp  route.cpp  route_manager.cpp  transmission_handler.cpp  typedefs.cpp
discnet/src/application/: configuration.cpp
discnet/src/linux/: adapter_fetcher.cpp
discnet/src/network/: buffer.cpp  data_handler.cpp  data_stream.cpp  multicast_client.cpp  network_handler.cpp  read_buffer.cpp  udp_client.cpp  unicast_client.cpp
discnet/src/network/messages/: data_message.cpp  discovery_message.cpp  header.cpp  packet.cpp
discnet/src/windows/: adapter_fetcher.cpp  wbem_consumer.cpp  windows_adapter_fetcher.cpp
discnet_app/: CMakeLists.txt  launch.json
discnet_app/src/: application.cpp  application.hpp  asio_context.cpp  asio_context.hpp  configuration.cpp  main.cpp
discnet_lib/: CMakeLists.txt
discnet_lib/src/: adapter_manager.cpp  discnet_lib.cpp  route.cpp  route_manager.cpp  wbem_consumer.cpp
discnet_lib/src/network/: buffer.cpp  udp_client.cpp
discnet_lib/src/network/messages/: data_message.cpp  discovery_message.cpp  header.cpp  packet.cpp
discnet_lib/src/windows/: wbem_consumer.cpp
discnet_sim/: CMakeLists.txt
discnet_sim/src/: arrow.h  diagramitem.cpp  diagramitem.h  diagramscene.h  diagramscene.qrc  diagramtextitem.h  main.cpp  mainwindow.cpp  mainwindow.h  node.cpp  node.h  nodedialog.cpp  nodedialog.h  nodedialog.ui
discnet_sim/src/models/: RouteModel.cpp  RouteModel.h
discnet_sim/src/simulator/: network_adapter_fetcher.h  network_router.cpp  network_router.h  network_switch.cpp  network_switch.h  network_traffic_manager.cpp  network_traffic_manager.h  node.cpp  node.h  simulator.cpp  simulator.h  udp_client.cpp  udp_client.h
discnet_sim/src/ui/: ApplicationWindow.cpp  ApplicationWindow.h  ApplicationWindow.ui
discnet_sim/src/ui/models/: SwitchModel.h
discnet_sim/src/ui/widgets/: AdapterDialog.cpp  AdapterDialog.h  AdapterDialog.ui  AdapterItem.cpp  AdapterItem.h  ConnectionItem.cpp  ConnectionItem.h  NodeDialog.cpp  NodeDialog.h  NodeDialog.ui  NodeItem.cpp  NodeItem.h  RouterItem.cpp  RouterItem.h  SimulatorScene.cpp  SimulatorScene.h  ToolBoxItem.cpp  ToolBoxItem.h
discnet_test/: CMakeLists.txt
discnet_test/src/: adapter_manager_test.cpp  data_stream_test.cpp  main.cpp  route_manager_test.cpp
include/discnet/: adapter.hpp  adapter_manager.hpp  discnet.hpp  discovery_data_handler.hpp  discovery_message_handler.hpp  node.hpp  route.hpp  route_manager.hpp  transmission_handler.hpp  typedefs.hpp
include/discnet/application/: configuration.hpp
include/discnet/linux/: adapter_fetcher.hpp
include/discnet/network/: buffer.hpp  data_handler.hpp  data_stream.hpp  multicast_client.hpp  network_handler.hpp  network_info.hpp  read_buffer.hpp  udp_client.hpp  unicast_client.hpp
include/discnet/network/messages/: data_message.hpp  discovery_message.hpp  header.hpp  packet.hpp
include/discnet/windows/: wbem_consumer.hpp  windows_adapter_fetcher.hpp
include/discnet_app/: application.hpp  asio_context.hpp  configuration.hpp
include/discnet_lib/: adapter.hpp  adapter_manager.hpp  discnet_lib.hpp  discovery_data_handler.hpp  discovery_message.hpp  node.hpp  route.hpp  route_manager.hpp  typedefs.hpp  wbem_consumer.hpp
include/discnet_lib/network/: buffer.hpp  network_info.hpp  udp_client.hpp
include/discnet_lib/network/messages/: data_message.hpp  discovery_message.hpp  header.hpp  packet.hpp
include/discnet_lib/windows/: wbem_consumer.hpp
resources/: notes.json  notes.txt
